--- a/index.html
+++ b/index.html
@@ -11,14 +11,28 @@
 <body>
 
   <div class=" main w-full">
-    <nav class="fixed top-0 left-0 px-10 py-5">
+    <nav class=" w-full fixed top-0 left-0 px-10 py-3 flex justify-between items-center">
       <img class="w-[160px] mix-blend-screen [filter:contrast(150%)_saturate(150%)]" src="cyberpunk_img-(1).webp" alt="">
+      <div class="flex gap-3 items-center ">
+        <a href="#games" class="tracking-tight text-white hover:text-blue-300 transition-colors text-lg [text-shadow:0_0_10px_rgba(255,255,255,0.5)]">Games</a>
+        <a href="#store" class="tracking-tight text-white hover:text-blue-300 transition-colors text-lg [text-shadow:0_0_10px_rgba(255,255,255,0.5)]">Store</a>
+        <a href="#community" class="tracking-tight text-white hover:text-blue-300 transition-colors text-lg [text-shadow:0_0_10px_rgba(255,255,255,0.5)]">Community</a>
+        <a href="#news" class="tracking-tight text-white hover:text-blue-300 transition-colors text-lg [text-shadow:0_0_10px_rgba(255,255,255,0.5)]">News</a>
+        <a href="#support" class="tracking-tight text-white hover:text-blue-300 transition-colors text-lg [text-shadow:0_0_10px_rgba(255,255,255,0.5)]">Support</a>
+
+      </div>
     </nav>
     <div class="w-full h-full overflow-hidden">
       <img class="absolute top-[55%] left-1/2 -translate-x-1/2 -translate-y-1/2 w-3/4 mix-blend-screen [filter:contrast(150%)_saturate(150%)]" src="https://preview.redd.it/3d-rendered-the-cyberpunk-logo-using-blender-v0-khopj82wqee91.png?width=1080&crop=smart&auto=webp&s=0e62e74ba8b5ef6191228e855079491cfa56f57b" alt="">
+
+      <div class="w-[20rem] h-[20rem] rounded-full bg-blue-600 blur-[90px]
+       absolute top-[55%] left-1/2 -translate-x-1/2 -translate-y-1/2 z-[-1]"></div>
+
       <canvas id="canvas"></canvas>
+
     </div>
-    <div class="w-full h-screen bg-zinc-800"></div>
+    <div class="w-full h-screen bg-[#000]">
+    </div>
   </div>
 
 
